--- a/app/src/main/res/layout/dialog_app_download.xml
+++ b/app/src/main/res/layout/dialog_app_download.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_30"
         android:paddingHorizontal="@dimen/margin_20"
         android:paddingBottom="@dimen/margin_20"
         app:layout_constraintTop_toTopOf="parent"
