--- a/app/src/main/res/layout/dialog_commission_info.xml
+++ b/app/src/main/res/layout/dialog_commission_info.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:background="@drawable/bg_radius_8_commission_info_dialog">
 
     <LinearLayout
@@ -72,6 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="25dp"
+                android:gravity="start"
                 android:text="@string/commission_desc_1"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="14sp"
@@ -95,6 +97,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="25dp"
+                android:gravity="start"
                 android:text="@string/commission_desc_2"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="14sp"
