--- a/app/src/main/res/layout/fragment_other_bet_record.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:visibility="visible"
+        app:listWidth="150dp"
         android:background="@color/color_232C4F_F3F9FF"
         app:defaultStatusText="@string/all_plat_type"
         app:layout_constraintTop_toBottomOf="@id/date_search_bar" />
