--- a/app/src/main/res/layout/dialog_money_submit.xml
+++ b/app/src/main/res/layout/dialog_money_submit.xml
@@ -5,6 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
         android:orientation="vertical"
         android:background="@drawable/bg_white_radius_8">
 
@@ -27,7 +28,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="26dp"
+            android:layout_marginHorizontal="@dimen/margin_20"
             android:layout_marginTop="14dp"
             android:orientation="horizontal">
 
@@ -43,7 +44,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
-                android:layout_marginHorizontal="5dp"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
                 tools:text="在线支付" />
@@ -53,7 +53,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="26dp"
+            android:layout_marginHorizontal="@dimen/margin_20"
             android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
@@ -69,7 +69,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
-                android:layout_marginHorizontal="5dp"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
                 tools:text="100 RMB" />
@@ -80,9 +79,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:layout_marginStart="26dp"
+            android:layout_marginHorizontal="@dimen/margin_20"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="5dp"
             android:text="@string/hint_pay1"
             android:textColor="@color/color_909090_666666"
             android:textSize="@dimen/textSize12sp" />
@@ -91,9 +89,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:layout_marginStart="26dp"
+            android:layout_marginHorizontal="@dimen/margin_20"
             android:layout_marginTop="3dp"
-            android:layout_marginEnd="5dp"
             android:text="@string/hint_pay2"
             android:textColor="@color/color_909090_666666"
             android:textSize="@dimen/textSize12sp" />
