优化自我限制显示

--- a/app/src/main/res/layout/fragment_self_limit_bet.xml
+++ b/app/src/main/res/layout/fragment_self_limit_bet.xml
@@ -122,6 +122,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/transparent"
                 android:hint="@string/self_limit_per_bet_limit_input_highest"
+                android:maxLength="8"
                 android:inputType="number"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textColorHint="@color/color_C9CFD7"
@@ -187,7 +188,7 @@
         android:layout_marginHorizontal="@dimen/margin_20"
         android:layout_marginTop="@dimen/margin_15"
         android:layout_marginBottom="@dimen/margin_14"
-        android:background="@drawable/ic_submit"
+        android:background="@drawable/selector_button_default"
         android:enabled="false"
         android:gravity="center"
         android:text="@string/btn_confirm"
