--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -32,6 +32,7 @@
             android:id="@+id/status_selector"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            app:listWidth="150dp"
             android:background="@color/color_232C4F_F3F9FF"
             app:defaultStatusText="@string/all_status"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector"/>
