--- a/app/src/main/res/layout/activity_third_game.xml
+++ b/app/src/main/res/layout/activity_third_game.xml
@@ -1,7 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/white">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_back_circle"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ivBack"
+            android:layout_marginLeft="8dp"
+            android:src="@drawable/logo_okbet_color"/>
+
+        <ImageView
+            android:id="@+id/ivDeposit"
+            android:layout_width="wrap_content"
+            android:layout_height="34dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_deposit_circle"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <org.cxct.sportlottery.view.webView.OkWebView
         android:id="@+id/web_view"
@@ -9,9 +47,4 @@
         android:layout_height="match_parent"
         android:overScrollMode="never"/>
 
-    <org.cxct.sportlottery.ui.thirdGame.MotionFloatingMenu
-        android:id="@+id/motion_menu"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</RelativeLayout>
+</LinearLayout>
