投注记录部分参数显示

--- a/app/src/main/res/layout/fragment_endcard_settled_record.xml
+++ b/app/src/main/res/layout/fragment_endcard_settled_record.xml
@@ -92,7 +92,7 @@
              android:layout_marginTop="@dimen/margin_4"
              android:textColor="@color/color_BEC7DC"
              android:textSize="@dimen/textSize14sp"
-             android:text="1,000,000.00"/>
+             tools:text="1,000,000.00"/>
 
      </LinearLayout>
         <LinearLayout
@@ -118,7 +118,7 @@
                 android:layout_marginTop="@dimen/margin_4"
                 android:textColor="@color/color_BEC7DC"
                 android:textSize="@dimen/textSize14sp"
-                android:text="27"/>
+                tools:text="27"/>
 
         </LinearLayout>
         <LinearLayout
@@ -144,7 +144,7 @@
                 android:layout_marginTop="@dimen/margin_4"
                 android:textColor="@color/color_BEC7DC"
                 android:textSize="@dimen/textSize14sp"
-                android:text="1,000,000.00"/>
+                tools:text="1,000,000.00"/>
 
         </LinearLayout>
     </LinearLayout>
