--- a/app/src/main/res/layout/fragment_endcard_record_detail.xml
+++ b/app/src/main/res/layout/fragment_endcard_record_detail.xml
@@ -77,7 +77,7 @@
              android:textColor="@color/color_FFFFFF"
              android:text="@string/P316"/>
          <ImageView
-             android:id="@+id/iv_status"
+             android:id="@+id/ivStatus"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:adjustViewBounds="true"
@@ -139,18 +139,44 @@
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_6D7693"
                 android:text="@string/P317"/>
-            <TextView
-                android:id="@+id/tvMatchesName"
+            <androidx.legacy.widget.Space
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:layout_marginLeft="@dimen/margin_12"
-                android:lines="1"
-                android:ellipsize="end"
-                android:textSize="@dimen/textSize14sp"
-                android:textColor="@color/color_FFFFFF"
-                android:text="red tame  VS  Bule Tame"/>
+                android:layout_weight="1"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tvHomeName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="100dp"
+                    android:lines="1"
+                    android:ellipsize="end"
+                    android:textSize="@dimen/textSize14sp"
+                    android:textColor="@color/color_FFFFFF"
+                    android:text="red tame"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_10"
+                    android:lines="1"
+                    android:ellipsize="end"
+                    android:textSize="@dimen/textSize14sp"
+                    android:textColor="@color/color_F5FFC700"
+                    android:text="VS"/>
+                <TextView
+                    android:id="@+id/tvAwayName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="100dp"
+                    android:lines="1"
+                    android:ellipsize="end"
+                    android:textSize="@dimen/textSize14sp"
+                    android:textColor="@color/color_FFFFFF"
+                    android:text="Bule Tame"/>
+            </LinearLayout>
+
         </LinearLayout>
         <View
             android:layout_width="match_parent"
