--- a/app/src/main/res/layout/dialog_endcard_bet_fail.xml
+++ b/app/src/main/res/layout/dialog_endcard_bet_fail.xml
@@ -19,6 +19,7 @@
             android:src="@drawable/ic_fail_red"/>
 
         <TextView
+            android:id="@+id/tvMsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_16"
