--- a/app/src/main/res/layout/fragment_endcard_record_detail.xml
+++ b/app/src/main/res/layout/fragment_endcard_record_detail.xml
@@ -366,6 +366,7 @@
         android:gravity="center_vertical"
         android:background="@color/color_1A202E">
         <TextView
+            android:id="@+id/tvWinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minWidth="86dp"
