--- a/app/src/main/res/layout/fragment_endcard_home.xml
+++ b/app/src/main/res/layout/fragment_endcard_home.xml
@@ -20,10 +20,35 @@
             app:contentScrim="@color/transparent"
             app:layout_scrollFlags="scroll|snap">
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="104dp"
-                android:src="@drawable/img_endcard_top" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/img_endcard_top">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_28"
+                    android:layout_marginTop="22dp"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/textSize18sp"
+                    android:textColor="@color/color_FFFFFF"
+                    android:text="@string/N903"/>
+                <TextView
+                    android:id="@+id/tvRule"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/margin_28"
+                    android:minWidth="74dp"
+                    android:paddingHorizontal="@dimen/margin_10"
+                    android:gravity="center"
+                    android:foreground="@drawable/fg_ripple"
+                    android:background="@drawable/bg_darkblue_radius_14"
+                    android:layout_marginLeft="@dimen/margin_28"
+                    android:layout_marginTop="@dimen/margin_8"
+                    android:textSize="@dimen/textSize14sp"
+                    android:textColor="@color/color_FFFFFF"
+                    android:text="@string/P323"/>
+            </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <LinearLayout
