--- a/app/src/main/res/layout/activity_third_game.xml
+++ b/app/src/main/res/layout/activity_third_game.xml
@@ -6,23 +6,25 @@
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/toolBar"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="28dp"
+        android:paddingHorizontal="32dp"
         android:background="@color/white">
 
         <ImageView
             android:id="@+id/ivBack"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/ic_back_circle"/>
 
         <ImageView
+            android:id="@+id/ivLogo"
             android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_height="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ivBack"
@@ -31,12 +33,11 @@
 
         <ImageView
             android:id="@+id/ivDeposit"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="10dp"
             android:src="@drawable/ic_deposit_circle"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
