--- a/app/src/main/res/layout/item_endcard_detail_result_row_content.xml
+++ b/app/src/main/res/layout/item_endcard_detail_result_row_content.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="32dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/color_161B28">
 
     <TextView
@@ -12,7 +13,7 @@
         android:gravity="center"
         android:textAllCaps="true"
         android:textStyle="bold"
-        android:text="Q1"
+        tools:text="Q1"
         android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/textSize14sp" />
 
@@ -29,7 +30,7 @@
         android:gravity="center"
         android:textAllCaps="true"
         android:textStyle="bold"
-        android:text="0-1"
+        tools:text="0-1"
         android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/textSize14sp" />
 
@@ -46,7 +47,7 @@
         android:gravity="center"
         android:fontFamily="@font/inter_bold"
         android:textFontWeight="500"
-        android:text="₱ +895.64"
+        tools:text="₱ +895.64"
         android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/textSize14sp" />
 </LinearLayout>
