--- a/app/src/main/res/layout/view_endcard_guide_step3.xml
+++ b/app/src/main/res/layout/view_endcard_guide_step3.xml
@@ -31,6 +31,10 @@
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_40">
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        <LinearLayout
             android:id="@+id/linNextStep"
             android:layout_width="wrap_content"
             android:layout_height="44dp"
@@ -50,6 +54,19 @@
                 android:textColor="@color/color_F5FFC700"
                 android:textSize="@dimen/textSize14sp"
                 android:text="( 3/5 )"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/tvSkip"
+            android:layout_width="wrap_content"
+            android:layout_height="44dp"
+            android:minWidth="84dp"
+            android:paddingHorizontal="@dimen/margin_8"
+            android:layout_marginLeft="@dimen/margin_8"
+            android:gravity="center"
+            android:background="@drawable/bg_gray_stoke_radius_8_trans"
+            android:textColor="@color/color_929292"
+            android:textSize="@dimen/textSize14sp"
+            android:text="@string/btn_pass"/>
         </LinearLayout>
         <TextView
             android:id="@+id/tvPrevious"
