--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -639,5 +639,7 @@
 
     <color name="color_00FF81">#00FF81</color>
     <color name="color_2D313D">#2D313D</color>
+    <color name="color_929292">#929292</color>
+    <color name="color_323232">#323232</color>
 
 </resources>
