--- a/app/src/main/res/layout/fragment_endcard_record_detail.xml
+++ b/app/src/main/res/layout/fragment_endcard_record_detail.xml
@@ -222,7 +222,7 @@
                 android:ellipsize="end"
                 android:textSize="@dimen/textSize14sp"
                 android:textColor="@color/color_6D7693"
-                android:text="@string/P318"/>
+                android:text="Bet"/>
             <TextView
                 android:id="@+id/tvBet"
                 android:layout_width="0dp"
