--- a/app/src/main/res/layout/dialog_endcard_bet.xml
+++ b/app/src/main/res/layout/dialog_endcard_bet.xml
@@ -76,6 +76,9 @@
                 android:layout_width="0dp"
                 android:layout_height="44dp"
                 android:layout_weight="1"
+                android:lines="1"
+                android:ellipsize="end"
+                android:paddingHorizontal="8dp"
                 android:foreground="@drawable/fg_ripple"
                 android:layout_marginLeft="@dimen/margin_12"
                 android:background="@drawable/bg_darkblue_radius_8"
@@ -87,6 +90,9 @@
                 android:layout_width="0dp"
                 android:layout_height="44dp"
                 android:layout_weight="1"
+                android:lines="1"
+                android:ellipsize="end"
+                android:paddingHorizontal="8dp"
                 android:foreground="@drawable/fg_ripple"
                 android:layout_marginLeft="@dimen/margin_14"
                 android:layout_marginRight="@dimen/margin_12"
