--- a/app/src/main/res/layout/item_endcard_record.xml
+++ b/app/src/main/res/layout/item_endcard_record.xml
@@ -140,6 +140,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:textAlignment="viewStart"
+                    android:lines="1"
+                    android:ellipsize="end"
                     android:fontFamily="@font/inter_bold"
                     android:textColor="@color/color_FFFFFF"
                     android:textFontWeight="500"
@@ -175,6 +177,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:textAlignment="viewStart"
+                    android:lines="1"
+                    android:ellipsize="end"
                     android:fontFamily="@font/inter_bold"
                     android:textFontWeight="500"
                     android:textColor="@color/color_FFFFFF"
