--- a/app/src/main/res/layout/dialog_endcard_bet_success.xml
+++ b/app/src/main/res/layout/dialog_endcard_bet_success.xml
@@ -203,7 +203,7 @@
                     android:ellipsize="end"
                     android:textSize="@dimen/textSize14sp"
                     android:textColor="@color/color_BEC7DC"
-                    android:text="@string/P319"/>
+                    android:text="@string/LT042"/>
                 <TextView
                     android:id="@+id/tvBetAmount"
                     android:layout_width="0dp"
@@ -232,7 +232,7 @@
                     android:ellipsize="end"
                     android:textSize="@dimen/textSize14sp"
                     android:textColor="@color/color_BEC7DC"
-                    android:text="@string/P320"/>
+                    android:text="@string/N142"/>
                 <TextView
                     android:id="@+id/tvOrderNumber"
                     android:layout_width="0dp"
@@ -258,7 +258,7 @@
             android:background="@drawable/selector_button_default"
             android:textSize="@dimen/textSize18sp"
             android:textColor="@color/color_FFFFFF"
-            android:text="Keep betting"/>
+            android:text="@string/P324"/>
     </LinearLayout>
     <ImageView
         android:id="@+id/ivClose"
