--- a/app/src/main/res/layout/view_endcard_guide_step5.xml
+++ b/app/src/main/res/layout/view_endcard_guide_step5.xml
@@ -34,6 +34,7 @@
             android:id="@+id/linNextStep"
             android:layout_width="wrap_content"
             android:layout_height="44dp"
+            android:minWidth="156dp"
             android:gravity="center"
             android:background="@drawable/bg_radius_8_white"
             android:paddingHorizontal="@dimen/margin_20">
@@ -54,8 +55,11 @@
         </LinearLayout>
         <TextView
             android:id="@+id/tvPrevious"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="44dp"
+            android:paddingHorizontal="@dimen/margin_12"
+            android:minWidth="156dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/margin_20"
             android:gravity="center"
             android:background="@drawable/bg_btn_preview_gray"
