--- a/app/src/main/res/layout/fragment_endcardgame.xml
+++ b/app/src/main/res/layout/fragment_endcardgame.xml
@@ -39,6 +39,14 @@
             android:textSize="16sp"
             tools:text="Card Game"
             android:text="@string/P304"/>
+        
+        <ImageView
+            android:id="@+id/ivLeague"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@+id/ivBack"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvBetAmount"
