--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -40,6 +40,7 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:maxLines="2"
         tools:text="Liaoning Flying Leopards"/>
 
     <TextView
@@ -78,6 +79,7 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:maxLines="2"
         tools:text="Liaoning Flying Leopards"/>
 
     <TextView
