--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -622,7 +622,7 @@
     <color name="color_181d28">#181d28</color>
     <color name="color_2B7DFF">#2B7DFF</color>
     <color name="color_0E131F">#0E131F</color>
-    <color name="color_30425F">#30425F</color>
+    <color name="color_314260">#314260</color>
     <color name="color_6AA4FF">#6AA4FF</color>
 
     <color name="color_0C121E">#0C121E</color>
