--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -641,5 +641,6 @@
     <color name="color_2D313D">#2D313D</color>
     <color name="color_929292">#929292</color>
     <color name="color_323232">#323232</color>
+    <color name="color_21283A">#21283A</color>
 
 </resources>
