增加inter标准字体

--- a/app/src/main/res/layout/item_endcard_detail_result_row_content.xml
+++ b/app/src/main/res/layout/item_endcard_detail_result_row_content.xml
@@ -47,7 +47,7 @@
         android:gravity="center"
         android:fontFamily="@font/inter_bold"
         android:textFontWeight="500"
-        tools:text="₱ +895.64"
+        tools:text="₱ 895.64"
         android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/textSize14sp" />
 </LinearLayout>
