--- a/app/src/main/res/layout/fragment_endcard_record_detail.xml
+++ b/app/src/main/res/layout/fragment_endcard_record_detail.xml
@@ -392,7 +392,7 @@
             android:textColor="@color/color_FFFFFF"
             android:fontFamily="@font/inter_bold"
             android:textFontWeight="600"
-            android:text="₱ +895.64"/>
+            android:text="₱ 895.64"/>
     </LinearLayout>
     <TextView
         android:id="@+id/tvSettleTime"
