--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -108,8 +108,10 @@
 
     <TextView
         android:id="@+id/tvNum"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="16dp"
+        android:minHeight="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="19dp"
