--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -33,7 +33,7 @@
     <TextView
         android:id="@+id/tvHomeName"
         android:layout_width="88dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginTop="4dp"
@@ -70,7 +70,7 @@
     <TextView
         android:id="@+id/tvAwayName"
         android:layout_width="88dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         app:layout_constraintLeft_toRightOf="@+id/tvVS"
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginStart="4dp"
