--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -37,6 +37,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginTop="4dp"
+        android:lineSpacingExtra="-3dp"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="12sp"
@@ -75,6 +76,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
+        android:lineSpacingExtra="-3dp"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="12sp"
