--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -37,9 +37,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginTop="4dp"
-        android:lineSpacingExtra="-3dp"
+        android:lineSpacingExtra="-1dp"
+        android:fontFamily="@font/inter_regular"
+        android:textFontWeight="200"
         android:gravity="center"
-        android:textColor="@color/white"
+        android:textColor="@color/color_BEC7DC"
         android:textSize="12sp"
         android:maxLines="2"
         tools:text="Liaoning Flying Leopards"/>
@@ -76,9 +78,11 @@
         app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
-        android:lineSpacingExtra="-3dp"
+        android:lineSpacingExtra="-1dp"
+        android:fontFamily="@font/inter_regular"
+        android:textFontWeight="400"
         android:gravity="center"
-        android:textColor="@color/white"
+        android:textColor="@color/color_BEC7DC"
         android:textSize="12sp"
         android:maxLines="2"
         tools:text="Liaoning Flying Leopards"/>
@@ -104,8 +108,9 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="19dp"
         android:gravity="center"
-        android:textSize="11sp"
+        android:textSize="12sp"
         android:textColor="@color/white"
+        android:textStyle="bold"
         android:text="@string/P303"/>
 
     <TextView
